Multiple changes - APIchanges side panel, card view added for screens, repository changes for Categories

--- a/Pages/CreateUserAccessControl.cshtml
+++ b/Pages/CreateUserAccessControl.cshtml
@@ -85,7 +85,7 @@
                                 <label for="ProfileName" class="form-label">Profile Name</label>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
-                                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                        <span class="input-group-text"><i class="fas fa-user-circle"></i></span>
                                     </div>
                                     <input id="ProfileName" placeholder="Profile Name" class="form-control" />
                                 </div>
@@ -105,7 +105,7 @@
                             <div class="row">
                                 <div class="col-2"></div>
                                 <div class="col-3 me-4">
-                                    <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Create</button>
+                                    <button type="submit" class="btn create-btn" style="width:140px;">Create</button>
                                 </div>
                                 <div class="col-4 ms-3">
                                     <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
