--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -39,15 +39,15 @@
                     </td>
                     <td>
                         <label for="cwInput" class="">Withdrawal Fee Amount</label><br />
-                        <input id="cwInput" class="form-control" value="@Model.TransactionFeesAmount.CWTxnFee" style="font-weight:bolder; padding-inline-start:10px;  width:80%;" disabled />
+                        <input id="cwInput" class="form-control fw-bold" value="@Model.TransactionFeesAmount.CWTxnFee" style="padding-inline-start:10px;  width:80%;" disabled />
                     </td>
                     <td>
                         <label for="biInput" class="">Inquiry Fee Amount</label><br />
-                        <input id="biInput" class="form-control" value="@Model.TransactionFeesAmount.BITxnFee" style="font-weight:bolder; padding-inline-start:10px;  width:80%;" disabled />
+                        <input id="biInput" class="form-control fw-bold" value="@Model.TransactionFeesAmount.BITxnFee" style="padding-inline-start:10px;  width:80%;" disabled />
                     </td>
                     <td>
                         <label for="msInput" class="">Mini Statement Fee Amount</label><br />
-                        <input id="msInput" class="form-control" value="@Model.TransactionFeesAmount.MSTxnFee" style="font-weight:bolder; padding-inline-start:10px;  width:80%;" disabled />
+                        <input id="msInput" class="form-control fw-bold" value="@Model.TransactionFeesAmount.MSTxnFee" style="padding-inline-start:10px;  width:80%;" disabled />
                     </td>
                 </tr>
                 <tr style="border-color:white;">
@@ -186,10 +186,10 @@
     </div>
     <div id="downloadCointainer">
         <!-- Added Download Buttons -->
-        <button id="downloadButton1" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff"><i class="ion-android-download">&nbsp;</i>Export Above Data in CSV</button>
-        <button id="downloadButton2" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff"><i class="ion-android-download">&nbsp;</i>Export All Data in CSV</button>
-        <button id="downloadButton3" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff"><i class="ion-android-download">&nbsp;</i>Export Above Data in Excel</button>
-        <button id="downloadButton4" class="btn rounded-pill shadow mt-2 fw-bold" style="background-color: #17a2b8;color:#ffffff"><i class="ion-android-download">&nbsp;</i>Export All Data in Excel</button>
+        <button id="downloadButton1" class="btn rounded-pill my-1 p-2 create-btn fw-bold" style="font-size:0.8rem; height:auto;"><i class="ion-android-download">&nbsp;</i>Export Above Data in CSV</button>                                                                       
+        <button id="downloadButton2" class="btn rounded-pill my-1 p-2 create-btn fw-bold" style="font-size:0.8rem; height:auto;"><i class="ion-android-download">&nbsp;</i>Export All Data in CSV</button>
+        <button id="downloadButton3" class="btn rounded-pill my-1 p-2 create-btn fw-bold" style="font-size:0.8rem; height:auto;"><i class="ion-android-download">&nbsp;</i>Export Above Data in Excel</button>
+        <button id="downloadButton4" class="btn rounded-pill my-1 p-2 create-btn fw-bold" style="font-size:0.8rem; height:auto;"><i class="ion-android-download">&nbsp;</i>Export All Data in Excel</button>
     </div>
 </div>
 
