--- a/Pages/ProfileCategoryAssign.cshtml
+++ b/Pages/ProfileCategoryAssign.cshtml
@@ -97,10 +97,10 @@
                         <div style="display: flex; justify-content:space-around;height:auto;">
                             <div class="row">
                                 <div class="col-3">
-                                    <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Assign</button>
+                                    <button type="submit" class="btn create-btn" style="width:140px;">Assign</button>
                                 </div>
                                 <div class="col-3 ms-2 me-2">
-                                    <button id="ClearBtn" type="reset" class="btn" style="width:140px; background-color:#17a2b8;color:white">Clear</button>
+                                    <button id="ClearBtn" type="reset" class="btn create-btn" style="width:140px;">Clear</button>
 
                                 </div>
                                 <div class="col-3">
