--- a/Pages/Shared/_SidebarPartial.cshtml
+++ b/Pages/Shared/_SidebarPartial.cshtml
@@ -47,7 +47,7 @@
                 </ul>
             </li>
 
-            <li class="nav-header">Profile View</li>
+            <li class="nav-header fw-bolder">Profile View</li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-user-circle"></i>
@@ -55,12 +55,12 @@
                         Profile <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
-                <ul class="nav nav-treeview" id="dynamicProfileName" style="border-left:3px ridge #E5E4E2">
+                <ul class="nav nav-treeview" id="dynamicProfileName" style="border-left:1px ridge #DDDFBF">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
             </li>
 
-            <li class="nav-header">Categories View</li>
+            <li class="nav-header fw-bolder">Categories View</li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas ion-android-drafts"></i>
@@ -68,12 +68,12 @@
                         Categories <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
-                <ul class="nav nav-treeview ml-2" id="dynamicCategoriesList" style="border-left:3px ridge #E5E4E2">
+                <ul class="nav nav-treeview ml-2" id="dynamicCategoriesList" style="border-left:1px ridge #DDDFBF">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
             </li>
 
-            <li class="nav-header">Pages View </li>
+            <li class="nav-header fw-bolder">Pages View </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas ion-android-list"></i>
@@ -81,7 +81,7 @@
                         Pages <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
-                <ul class="nav nav-treeview" id="dynamicPagesList" style="border-left:3px ridge #E5E4E2">
+                <ul class="nav nav-treeview" id="dynamicPagesList" style="border-left:1px ridge #DDDFBF">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
             </li>
