--- a/Pages/UpdateUserAccessControl.cshtml
+++ b/Pages/UpdateUserAccessControl.cshtml
@@ -87,7 +87,7 @@
                             <div class="row">
                                 <div class="col-2"></div>
                                 <div class="col-3 me-4">
-                                    <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Update</button>
+                                    <button type="submit" class="btn create-btn" style="width:140px;">Update</button>
                                 </div>
                                 <div class="col-4 ms-3">
                                     <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
