--- a/Pages/CreateUserProfile.cshtml
+++ b/Pages/CreateUserProfile.cshtml
@@ -142,7 +142,7 @@
                             <div class="row">
                                 <div class="col-2"></div>
                                 <div class="col-3 me-4">
-                                    <button type="submit" onclick="prepareFormSubmission()" class="btn" style="width:140px; background-color:#17a2b8;color:white">Create</button>
+                                    <button type="submit" onclick="prepareFormSubmission()" class="btn create-btn" style="width:140px;">Create</button>
                                 </div>
                                 <div class="col-4 ms-3">
                                     <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
