--- a/Pages/UpdateTransactionFees.cshtml
+++ b/Pages/UpdateTransactionFees.cshtml
@@ -27,98 +27,135 @@
     </script>
 }
 
-<div class="mt-2 bottomDiv">
+<div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     @if (Model.TransactionFeeAmounts != null && Model.TransactionFeeAmounts.TxnFeeId > 0)
     {
-        <div class="container form-control border-2" style="width:40%; height:auto; background-color: #f4f0ec">
-            <form method="post">
-                <input hidden asp-for="@Model.TransactionFeeAmounts.TxnFeeId" />
-
-                <div class="border p-3 mt-4" style="background-color:white">
-                    <div class="row pb-2">
-                        <h2 style="color:#17a2b8; text-align:center">Transaction Fee Details</h2>
-                        <hr style="width:95%" />
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="@Model.TransactionFeeAmounts.CWTxnFee"></label>
-                        <input asp-for="@Model.TransactionFeeAmounts.CWTxnFee" class="form-control" />
-                        <span asp-validation-for="@Model.TransactionFeeAmounts.CWTxnFee" class="text-danger"></span>
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="@Model.TransactionFeeAmounts.BITxnFee"></label>
-                        <input asp-for="@Model.TransactionFeeAmounts.BITxnFee" class="form-control" />
-                        <span asp-validation-for="@Model.TransactionFeeAmounts.BITxnFee" class="text-danger"></span>
-
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="@Model.TransactionFeeAmounts.MSTxnFee"></label>
-                        <input asp-for="@Model.TransactionFeeAmounts.MSTxnFee" class="form-control" />
-                        <span asp-validation-for="@Model.TransactionFeeAmounts.MSTxnFee" class="text-danger"></span>
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="@Model.TransactionFeeAmounts.ChangePin"></label>
-                        <input asp-for="@Model.TransactionFeeAmounts.ChangePin" class="form-control" />
-                        <span asp-validation-for="@Model.TransactionFeeAmounts.ChangePin" class="text-danger"></span>
-                    </div>
-                    <div class="row">
-                        <div class="col-2"></div>
-                        <div class="col-3 me-3">
-                            <button type="submit" class="btn" style="width:160px; background-color:#17a2b8;color:white">Update</button>
+        <form method="post">
+            <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:50%;">
+                <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
+                    <div class="row pb-1 pt-2">
+                        <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Transaction Fee Details</div>
+                        <div>
+                            <hr />
                         </div>
-                        <div class="col-4 ms-3">
-                            <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
-                        </div>
-                        <div class="col-3"></div>
                     </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title fw-bold">Update Transaction Fee Details</div>
+                            <div class="card-tools">
+                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                                <button type="button" class="btn btn-tool" data-card-widget="remove">
+                                    <i class="fas fa-times"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <input hidden asp-for="@Model.TransactionFeeAmounts.TxnFeeId" />
 
+                            <div class="mb-3">
+                                <label asp-for="@Model.TransactionFeeAmounts.CWTxnFee"></label>
+                                <input asp-for="@Model.TransactionFeeAmounts.CWTxnFee" class="form-control" placeholder="0.000" />
+                                <span asp-validation-for="@Model.TransactionFeeAmounts.CWTxnFee" class="text-danger"></span>
+                            </div>
+                            <div class="mb-3">
+                                <label asp-for="@Model.TransactionFeeAmounts.BITxnFee"></label>
+                                <input asp-for="@Model.TransactionFeeAmounts.BITxnFee" class="form-control" placeholder="0.000" />
+                                <span asp-validation-for="@Model.TransactionFeeAmounts.BITxnFee" class="text-danger"></span>
 
+                            </div>
+                            <div class="mb-3">
+                                <label asp-for="@Model.TransactionFeeAmounts.MSTxnFee"></label>
+                                <input asp-for="@Model.TransactionFeeAmounts.MSTxnFee" class="form-control" placeholder="0.000" />
+                                <span asp-validation-for="@Model.TransactionFeeAmounts.MSTxnFee" class="text-danger"></span>
+                            </div>
+                            <div class="mb-3">
+                                <label asp-for="@Model.TransactionFeeAmounts.ChangePin"></label>
+                                <input asp-for="@Model.TransactionFeeAmounts.ChangePin" class="form-control" placeholder="0" />
+                                <span asp-validation-for="@Model.TransactionFeeAmounts.ChangePin" class="text-danger"></span>
+                            </div>
+                            <!-- Buttons for form submission -->
+                            <div style="display: flex; justify-content:space-around;height:auto;">
+                                <div class="row">
+                                    <div class="col-2"></div>
+                                    <div class="col-3 me-3">
+                                        <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Update</button>
+                                    </div>
+                                    <div class="col-4 ms-3">
+                                        <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                    </div>
+                                    <div class="col-3"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     }
     else
     {
         <!-- No data, perform add -->
-        <div class="container form-control border-2" style="width:40%; height:auto; background-color: #f4f0ec">
-            <form method="post">
-                <div class="border p-3 mt-4" style="background-color:white">
-                    <div class="row pb-2">
-                        <h2 style="color:#17a2b8; text-align:center">Transaction Fee Details</h2>
-                        <hr style="width:95%" />
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="TransactionFeeAmounts.CWTxnFee"></label>
-                        <input asp-for="TransactionFeeAmounts.CWTxnFee" class="form-control" value="" />
-                        <span asp-validation-for="TransactionFeeAmounts.CWTxnFee" class="text-danger"></span>
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="TransactionFeeAmounts.BITxnFee"></label>
-                        <input asp-for="TransactionFeeAmounts.BITxnFee" class="form-control" value="" />
-                        <span asp-validation-for="TransactionFeeAmounts.BITxnFee" class="text-danger"></span>
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="TransactionFeeAmounts.MSTxnFee"></label>
-                        <input asp-for="TransactionFeeAmounts.MSTxnFee" class="form-control" value="" />
-                        <span asp-validation-for="TransactionFeeAmounts.MSTxnFee" class="text-danger"></span>
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="TransactionFeeAmounts.ChangePin"></label>
-                        <input asp-for="TransactionFeeAmounts.ChangePin" class="form-control" value="" />
-                        <span asp-validation-for="TransactionFeeAmounts.ChangePin" class="text-danger"></span>
-                    </div>
-                    <div class="row">
-                        <div class="col-2"></div>
-                        <div class="col-3 me-3">
-                            <button type="submit" class="btn" style="width:160px; background-color:#17a2b8;color:white">Add</button>
+        <form method="post">
+            <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:50%;">
+                <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
+                    <div class="row pb-1 pt-2">
+                        <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Transaction Fee Details</div>
+                        <div>
+                            <hr />
                         </div>
-                        <div class="col-4 ms-3">
-                            <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-title fw-bold">Add Transaction Fee Details</div>
+                            <div class="card-tools">
+                                <button type="button" class="btn btn-tool" data-card-widget="collapse">
+                                    <i class="fas fa-minus"></i>
+                                </button>
+                                <button type="button" class="btn btn-tool" data-card-widget="remove">
+                                    <i class="fas fa-times"></i>
+                                </button>
+                            </div>
                         </div>
-                        <div class="col-3"></div>
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <label asp-for="TransactionFeeAmounts.CWTxnFee"></label>
+                                <input asp-for="TransactionFeeAmounts.CWTxnFee" class="form-control" placeholder="0.000" />
+                                <span asp-validation-for="TransactionFeeAmounts.CWTxnFee" class="text-danger"></span>
+                            </div>
+                            <div class="mb-3">
+                                <label asp-for="TransactionFeeAmounts.BITxnFee"></label>
+                                <input asp-for="TransactionFeeAmounts.BITxnFee" class="form-control" placeholder="0.000" />
+                                <span asp-validation-for="TransactionFeeAmounts.BITxnFee" class="text-danger"></span>
+                            </div>
+                            <div class="mb-3">
+                                <label asp-for="TransactionFeeAmounts.MSTxnFee"></label>
+                                <input asp-for="TransactionFeeAmounts.MSTxnFee" class="form-control" placeholder="0.000" />
+                                <span asp-validation-for="TransactionFeeAmounts.MSTxnFee" class="text-danger"></span>
+                            </div>
+                            <div class="mb-3">
+                                <label asp-for="TransactionFeeAmounts.ChangePin"></label>
+                                <input asp-for="TransactionFeeAmounts.ChangePin" class="form-control" placeholder="0" />
+                                <span asp-validation-for="TransactionFeeAmounts.ChangePin" class="text-danger"></span>
+                            </div>
+                            <!-- Buttons for form submission -->
+                            <div style="display: flex; justify-content:space-around;height:auto;">
+                                <div class="row">
+                                    <div class="col-2"></div>
+                                    <div class="col-3 me-3">
+                                        <button type="submit" class="btn" style="width:140px; background-color:#17a2b8;color:white">Add</button>
+                                    </div>
+                                    <div class="col-4 ms-3">
+                                        <a asp-page="/Index" class="btn btn-secondary" style="width:180px;"> Back to Transactions</a>
+                                    </div>
+                                    <div class="col-3"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
     }
-
 </div>
