Added notification partial view - Toastr, Added New Screen - DeleteEntityRecord

--- a/Pages/Chart.cshtml
+++ b/Pages/Chart.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Chart Collection";
 }
 
+<partial name="_Notification" />
+
 <div class="container mt-5">
     <div id="formValidationError" class="text-danger fw-bold"></div>
     <form method="post" asp-page-handler="Submit Chart">
