--- a/Pages/Shared/_SidebarPartial.cshtml
+++ b/Pages/Shared/_SidebarPartial.cshtml
@@ -81,7 +81,7 @@
                         Pages <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
-                <ul class="nav nav-treeview" id="dynamicPagesList" style="border-left:1px ridge #DDDFBF">
+                <ul class="nav nav-treeview ms-2" id="dynamicPagesList" style="border-left:1px ridge #DDDFBF">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
             </li>
