--- a/Pages/ReadUserProfile.cshtml
+++ b/Pages/ReadUserProfile.cshtml
@@ -5,29 +5,7 @@
     int @categoryCount = 0;
 }
 
-@if (TempData["success"] != null)
-{
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/toastr.min.js"></script>
-    <script type="text/javascript">
-        toastr.options = {
-            "positionClass": "toast-bottom-right", // Set the position to right bottom
-        };
-        toastr.success('@TempData["success"]');
-    </script>
-}
-@if (TempData["error"] != null)
-{
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/toastr.min.js"></script>
-    <script type="text/javascript">
-        toastr.options = {
-            "positionClass": "toast-bottom-right", // Set the position to right bottom
-        };
-        toastr.error('@TempData["error"]');
-    </script>
-}
-
+<partial name="_Notification" />
 
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     <form method="post">
@@ -119,7 +97,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-user"></i></span>
                                 </div>
-                                <input asp-for="CurrentUserDetailsData.ProfileSiteData.ProfileName" class="form-select" disabled />
+                                <input asp-for="CurrentUserDetailsData.ProfileSiteData.ProfileName" class="form-select striped-select" disabled />
                             </div>
                             <span asp-validation-for="CurrentUserDetailsData.ProfileSiteData.ProfileName" class="text-danger fw-bold"></span>
                         </div>
@@ -130,7 +108,7 @@
                         @foreach (var checkbox in Model.StatusCheckboxes)
                         {
                             <div>
-                                    <input type="checkbox" class="form-check-input" name="UserStatusLst" id="checkbox_@checkbox" value="@checkbox" checked="true" disabled />
+                                <input type="checkbox" class="form-check-input" name="UserStatusLst" id="checkbox_@checkbox" value="@checkbox" checked disabled />
                                 <label for="checkbox_@checkbox" class="fw-normal" style="font-size:1.1rem">@checkbox</label>
                             </div>
                         }
