--- a/Pages/UpdateTransactionFees.cshtml
+++ b/Pages/UpdateTransactionFees.cshtml
@@ -4,28 +4,7 @@
     ViewData["Title"] = "Transaction Fee Details";
 }
 
-@if (TempData["success"] != null)
-{
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/toastr.min.js"></script>
-    <script type="text/javascript">
-        toastr.options = {
-            "positionClass": "toast-bottom-right", // Set the position to right bottom
-        };
-        toastr.success('@TempData["success"]');
-    </script>
-}
-@if (TempData["error"] != null)
-{
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/toastr.min.js"></script>
-    <script type="text/javascript">
-        toastr.options = {
-            "positionClass": "toast-bottom-right", // Set the position to right bottom
-        };
-        toastr.error('@TempData["error"]');
-    </script>
-}
+<partial name="_Notification" />
 
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     @if (Model.TransactionFeeAmounts != null && Model.TransactionFeeAmounts.TxnFeeId > 0)
