--- a/Pages/Shared/_MainContentWrapper.cshtml
+++ b/Pages/Shared/_MainContentWrapper.cshtml
@@ -1,6 +1,6 @@
 ﻿<!-- Content Header (Page header) -->
 <div class="content-header">
-    @* <div class="container-fluid">
+     <div class="container-fluid">
         <div class="row mb-2">
             <div id="contentHeaderDiv" class="col-sm-6">
                 <h1 class="m-0"></h1>
@@ -17,7 +17,7 @@
             <!-- /.col -->
         </div>
         <!-- /.row -->
-    </div> *@
+    </div>
     <!-- /.container-fluid -->
 </div>
 <!-- /.content-header -->
