--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -22,82 +22,6 @@ body {
     overflow-y: auto;
 }
 
-/* CSS for alternating background colors within specific divs */
-#availableCategories .category:nth-child(odd),
-#availablePages .page:nth-child(odd) {
-    background-color: #17a2b8; /* First color */
-    color: #FFFFFF;
-}
-
-#availableCategories .category:nth-child(even),
-#availablePages .page:nth-child(even) {
-    background-color: #FFFFFF; /* Second color */
-    color: #17a2b8;
-}
-
-#selectedCategories .category:nth-child(odd),
-#selectedPages .page:nth-child(odd) {
-    background-color: #17a2b8; /* First color */
-    color: #FFFFFF;
-}
-
-#selectedCategories .category:nth-child(even),
-#selectedPages .page:nth-child(even) {
-    background-color: #FFFFFF; /* Second color */
-    color: #17a2b8;
-}
-
-/* Adjustments for selected items */
-.page.selected, .category.selected {
-    position: relative;
-    font-weight: bold; /* Make selected items bold */
-}
-
-.page.selected::before, .category.selected::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2); /* Overlay effect */
-    z-index: 1;
-}
-
-.page.selected::after, .category.selected::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3); /* Shadow effect */
-    z-index: 2;
-}
-
-.page:hover, .category:hover {
-    transform: scale(1.05); /* Zoom effect on hover */
-    transition: transform 0.3s ease-in-out;
-}
-
-/* General styling for pages and categories */
-.page, .category {
-    padding: 5px; /* Add some padding */
-    margin-bottom: 2px; /* Space out items */
-    cursor: pointer; /* Change cursor on hover */
-    font-size: 1.2rem; /* Adjust font size to make it larger */
-}
-
-/* Scrollable areas */
-.scrollableProfile {
-    max-height: 200px;
-    overflow-y: auto; /* Enable scrolling */
-    padding: 10px;
-    background-color: #f0f0f0; /* Light background for visibility */
-    border: 1px solid #ccc; /* Add a border */
-}
-
-
 #searchResults {
     display: flex;
     flex-wrap: wrap;
@@ -144,4 +68,19 @@ body {
 .striped-select option:nth-child(2n+1) {
     background-color: white;
     color: #474440;
+}
+
+#terminalDetailsFormColumn1,
+#terminalDetailsFormColumn3 {
+    padding-right: 0;
+    padding-left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#terminalDetailsFormColumn2,
+#terminalDetailsFormColumn4 {
+    padding-right:0;
+    padding-left:0;
 }
