Removed Extra Layer of Categories Header

--- a/Pages/Shared/_SidebarPartial.cshtml
+++ b/Pages/Shared/_SidebarPartial.cshtml
@@ -55,20 +55,14 @@
                         Profile <i class="fas fa-angle-left right"></i>
                     </p>
                 </a>
-                <ul class="nav nav-treeview" id="dynamicProfileName" style="border-left:1px ridge #DDDFBF">
+                <ul class="nav nav-treeview ms-2" id="dynamicProfileName" style="border-left:1px ridge #DDDFBF">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
             </li>
 
             <li class="nav-header fw-bolder">Categories View</li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">
-                    <i class="nav-icon fas ion-android-drafts"></i>
-                    <p>
-                        Categories <i class="fas fa-angle-left right"></i>
-                    </p>
-                </a>
-                <ul class="nav nav-treeview ml-2" id="dynamicCategoriesList" style="border-left:1px ridge #DDDFBF">
+            <li class="nav-item menu-open">
+                <ul class="nav nav-treeview" id="dynamicCategoriesList">
                     <!-- Dynamic Content will be loaded here -->
                 </ul>
             </li>
