Added BreadCrumb and its Rendering for all Screens

--- a/Pages/Chart.cshtml
+++ b/Pages/Chart.cshtml
@@ -2,6 +2,7 @@
 @model Spider_EMT.Pages.ChartModel
 @{
     ViewData["Title"] = "Chart Collection";
+    TempData["NavigationalPageName"] = "Chart - Report";
 }
 
 <partial name="_Notification" />
