--- a/Pages/CreateCategory.cshtml
+++ b/Pages/CreateCategory.cshtml
@@ -2,6 +2,7 @@
 @model Spider_EMT.Pages.CreateCategoryModel
 @{
     ViewData["Title"] = "Category Creation";
+    TempData["NavigationalPageName"] = "Create Category";
 }
 
 <partial name="_Notification" />
@@ -13,7 +14,7 @@
 
             <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
                 <div class="row pb-1 pt-2">
-                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Create Category</div>
+                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">New Category Creation</div>
                     <div>
                         <hr />
                     </div>
