--- a/Pages/CreateUserProfile.cshtml
+++ b/Pages/CreateUserProfile.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model Spider_EMT.Pages.CreateUserProfileModel
 @{
-    ViewData["Title"] = "Create Profile";
+    ViewData["Title"] = "Create User";
+    TempData["NavigationalPageName"] = "Create User";
 }
 
 <partial name="_Notification" />
@@ -12,7 +13,7 @@
 
             <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around; height:auto; flex-direction:column;">
                 <div class="row pb-1 pt-2">
-                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem; font-weight:500">CREATE USER</div>
+                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem; font-weight:500">CREATE NEW USER</div>
                     <div>
                         <hr />
                     </div>
