--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,6 +2,7 @@
 @model Spider_EMT.Pages.IndexModel
 @{
     ViewData["Title"] = "Transaction Overview";
+    TempData["NavigationalPageName"] = "Dashboard";
 }
 
 <partial name="_Notification" />
