--- a/Pages/ProfileCategoryAssign.cshtml
+++ b/Pages/ProfileCategoryAssign.cshtml
@@ -2,6 +2,7 @@
 @model Spider_EMT.Pages.ProfileCategoryAssignModel
 @{
     ViewData["Title"] = "Assign Profile Category";
+    TempData["NavigationalPageName"] = "Assign Profile Category";
 }
 
 <partial name="_Notification" />
