--- a/Pages/ReadUserProfile.cshtml
+++ b/Pages/ReadUserProfile.cshtml
@@ -2,6 +2,7 @@
 @model Spider_EMT.Pages.ReadUserProfileModel
 @{
     ViewData["Title"] = "View User Profile";
+    TempData["NavigationalPageName"] = "View User Profile";
     int @categoryCount = 0;
 }
 
