--- a/Pages/UpdateTransactionFees.cshtml
+++ b/Pages/UpdateTransactionFees.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model Spider_EMT.Pages.UpdateTransactionFeesModel
 @{
-    ViewData["Title"] = "Transaction Fee Details";
+    ViewData["Title"] = "Update Transaction Fees";
+    TempData["NavigationalPageName"] = "Update Transaction Fees";
 }
 
 <partial name="_Notification" />
@@ -13,7 +14,7 @@
             <div class="container form-control pt-4 pb-2" style="height:auto; background-color: #f4f0ec; width:50%;">
                 <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
                     <div class="row pb-1 pt-2">
-                        <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Transaction Fee Details</div>
+                        <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Update Transaction Fee Details</div>
                         <div>
                             <hr />
                         </div>
