--- a/Pages/UpdateUserProfile.cshtml
+++ b/Pages/UpdateUserProfile.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @model Spider_EMT.Pages.UpdateUserProfileModel
 @{
-    ViewData["Title"] = "Update Profile";
+    ViewData["Title"] = "Update User";
+    TempData["NavigationalPageName"] = "Update User";
 }
 
 <partial name="_Notification" />
@@ -9,6 +10,12 @@
 <div class="mb-2" style="display:flex; flex-direction:column;justify-content:space-evenly;">
     <div class="container form-control pt-4 pb-2" style="height:auto;background-color: #f4f0ec; width:60%;">
         <div class="container form-control border-2 mb-2 card" style="display:flex; justify-content:space-around; height:auto; flex-direction:column; ">
+            <div class="row pb-1 pt-2">
+                <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Update Existing User</div>
+                <div>
+                    <hr />
+                </div>
+            </div>
             <div class="card">
                 <div class="card-header">
                     <div class="card-title fw-bold">User Search Box</div>
