--- a/Pages/CreateUserAccessControl.cshtml
+++ b/Pages/CreateUserAccessControl.cshtml
@@ -2,6 +2,7 @@
 @model Spider_EMT.Pages.CreateUserAccessControlModel
 @{
     ViewData["Title"] = "Create User Access Control";
+    TempData["NavigationalPageName"] = "Create User Access Control";
 }
 
 <partial name="_Notification" />
@@ -15,7 +16,7 @@
 
             <div class="container form-control border-2 mb-2" style="display:flex; justify-content:space-around;height:auto; flex-direction:column;">
                 <div class="row pb-1 pt-2">
-                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">CREATE USER ACCESS CONTROL LIST</div>
+                    <div style="color:#17a2b8; text-align:center; font-size:1.7rem;">Create Profile Association With Pages</div>
                     <div>
                         <hr />
                     </div>
