--- a/Pages/Shared/_MainContentWrapper.cshtml
+++ b/Pages/Shared/_MainContentWrapper.cshtml
@@ -1,17 +1,21 @@
 ﻿<!-- Content Header (Page header) -->
 <div class="content-header">
-     <div class="container-fluid">
+    <div class="container-fluid">
         <div class="row mb-2">
             <div id="contentHeaderDiv" class="col-sm-6">
-                <h1 class="m-0"></h1>
+                <h3 class="m-0">
+                    @TempData["NavigationalPageName"]
+                </h3>
             </div>
             <!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item">
-                        <a href="#"></a>
+                        <a href="#">Home</a>
                     </li>
-                    <li class="breadcrumb-item active"></li>
+                    <li class="breadcrumb-item active">
+                        @TempData["NavigationalPageName"]
+                    </li>
                 </ol>
             </div>
             <!-- /.col -->
